# llmtaskforce-emrd

./: .gitignore  README.md  analysis.py  app.py  llm_test.py  pyproject.toml
llm_extraction/: llm_test.py  run_llm.py
llm_extraction/prompts/: chmp.txt  prime.txt
outputs/: selected_codes.txt
outputs/az-di/: EU-1-09-531_public-assessment-report_20090730_20090730_instanyl-epar-public-assessment-report.md  EU-1-09-539_public-assessment-report_20090818_20090818_samsca-epar-public-assessment-report.md  EU-1-09-552_public-assessment-report_20091006_20091006_topotecan-teva-epar-public-assessment-report.md  EU-1-09-557_public-assessment-report_20091014_20140908_clopidogrel-qualimed-epar-public-assessment-report.md  EU-1-09-559_public-assessment-report_20091014_20091014_clopidogrel-mylan-epar-public-assessment-report.md  EU-1-09-562_public-assessment-report_20091014_20091014_zopya-epar-public-assessment-report.md  EU-1-09-564_public-assessment-report_20091112_20091112_ilaris-epar-public-assessment-report.md  EU-1-09-566_public-assessment-report_20091109_20091109_lamivudine-teva-epar-public-assessment-report.md  EU-1-09-580_public-assessment-report_20091019_20091019_enyglid-epar-public-assessment-report.md  (+141 more)
outputs/az-di-extracted/: az-di-extracts_complex.csv  az-di-extracts_simple.csv
outputs/deconstructed_prime/: deconstructed_prime.csv  (+25 more)
pdf_extraction/: az-document-intelligence.py  camelot_test.py  pymupdf_test.py
results/: all.csv  date_metrics.csv  ground_truth_CHMP_opiniondate.xlsx  prime_applicable_metrics.csv  prime_status_metrics.csv  sampled_api.xlsx
(+361 files in other folders)
